--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
     "html-webpack-plugin": "^2.15.0",
     "jasmine-core": "^2.4.1",
     "jasmine-webpack-plugin": "^0.1.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-cli": "^0.1.2",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-webpack": "^1.7.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14"
