--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
     "cssnano": "^3.5.2",
+    "gulp": "^3.9.1",
     "handlebars": "^4.0.5",
     "handlebars-loader": "^1.2.0",
     "html-webpack-plugin": "^2.15.0",
@@ -28,6 +29,7 @@
     "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-stream": "^3.1.0"
   }
 }
